# master_slave

ESP_read/: 設計計画.txt
ESP_read/esp_read_wifi/: esp_read_wifi.ino
ROS2/catchrobo_msgs/: CMakeLists.txt  package.xml
ROS2/catchrobo_msgs/msg/: SlaveControl.msg
ROS2/dynamixel_control/: CMakeLists.txt  package.xml
ROS2/dynamixel_control/config/: dynamixel.yml
ROS2/dynamixel_control/include/: dynamixel_workbench.h
ROS2/dynamixel_control/launch/: catchrobo.launch.py
ROS2/dynamixel_control/src/: dynamixel_node.cpp  old_dynamixel_node.cpp
ROS2/dynamixel_control/src/dynamixel_workbench_toolbox/: dynamixel_driver.cpp  dynamixel_item.cpp  dynamixel_tool.cpp  dynamixel_workbench.cpp
